# AppliedRoboticsStudentInterface

./: CMakeLists.txt  README.md  victim_gate_detection.cpp
FINAL EXAM/: intrinsic_calibration.xml
FINAL EXAM/inc/: dubins.h
FINAL EXAM/src/: border_detection.cpp  mission.cpp  obstacle_detection.cpp  robot_finder.cpp  rrt_star.cpp
FInal CMakeList/: CMakeLists.txt
Soruces/: dubins.cpp  obstacle_detection.cpp  student_interface.cpp  victim_gate_detection.cpp
camera_vision/: camera_test.py
camera_vision_tester/: camera.cpp  camera_test.py  student_interface.cpp
camera_vision_tester/more images/: Values for real world data.jfif  full real detection.jfif  victim rect.jfif
final prez/: intrinsic_calibration.xml
final prez/inc/: mission.h  rrt_star.hpp
final prez/src/: dubins.cpp  mission.cpp  obstacle_detection.cpp  robot_finder.cpp  victim_gate_detection.cpp  victim_gate_detection.hpp
inc/: border_detection.h  clipper.hpp  dubins.h  mission.h  obstacle_detection.h  robot_finder.h  rrt_star.h  victim_gate_detection.h
includes/: dubins.hpp  mission.h  mission.hpp  rrt_star.h  victim_gate_detection.h
src/: border_detection.cpp  dubins.cpp  dubins.h  dubins.hpp  mission.cpp  mission.h  mission.hpp  rrt_star.cpp  rrt_star.h  rrt_star.hpp  student_interface.cpp  victim_gate_detection.cpp
uptdated src/src/: border_detection.cpp  mission.cpp  obstacle_detection.cpp  rrt_star.cpp  student_interface.cpp  victim_gate_detection.cpp
